--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+    implementation('org.springframework.boot:spring-boot-starter-validation')
+    compile group: 'javax.validation', name: 'validation-api', version: '2.0.0.Final'
     implementation 'org.projectlombok:lombok'
     annotationProcessor("org.projectlombok:lombok")
     runtimeOnly 'org.postgresql:postgresql'
